use singleton for variables